# audio-engine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AudioBuffer.h.F057E929B58158FF.idx  AudioFileIO.cpp.18030AC83BDC12D4.idx  AudioFileIO.h.5B03B62E98B1A1DD.idx  BlockUtils.cpp.91A43CA31CE81C75.idx  BlockUtils.h.0AD97BE0C24D8CEF.idx  Effect.h.8523136AB8141650.idx  EffectChain.cpp.0D2CF5D0484748B5.idx  EffectChain.h.584B2850FEA1A6B0.idx  Gain.cpp.3C74EC006857EC4B.idx  Gain.h.B259B1B292C688EC.idx  main.cpp.60FF237534911BEB.idx  sndfile.h.922F062137412C1D.idx
src/: AudioBuffer.h  AudioFileIO.cpp  AudioFileIO.h  Effect.h  EffectChain.cpp  EffectChain.h  main.cpp
src/Effects/: Gain.cpp  Gain.h
src/app/: main.cpp  main_engine.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioNode.h  BlockUtils.h
src/dsp/: CircularBuffer.cpp  CircularBuffer.h
src/effects/: Effect.h  EffectChain.cpp  EffectChain.h  Gain.cpp  Gain.h  ffDelay.cpp  ffDelay.h
src/tests/: BlockUtilsTest.cpp  CircularBufferTest.cpp  GainTest.cpp
